5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1822_3184.log
== TEST (2019-06-13 10:04:41) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor")))

for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:04:57) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))

for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:05:31) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=0
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:05:38) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:06:07) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:09:49) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:02) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:10:10) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:11:04) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(v):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:12:20) 
-- CODE:
from numpy import*
v= input("seu vetor: ")
j=''
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:13:08) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''

print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:16:03) 
-- CODE:
from numpy import*
v= input("seu vetor: ")
j=''
for i in range(v):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:29) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(v):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:42) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(v):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:48) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:17:58) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=0
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:08) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=''
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:15) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
j=""
for i in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:18:27) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for j in range(size(v)):
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:19:57) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:25) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(v):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:20:42) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-i-1
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:05) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	i=size(v)-1-j
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:15) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:21:50) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:02) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(v[j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:08) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(v[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:17) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(j)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:30) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:46) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(size(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:22:57) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:04) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:06) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux= v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:23:55) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:24:30) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:17) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:48) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:26:56) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:01) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))
aux=zeros(v,dtype=int)
for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:28:44) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))

for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:29:53) 
-- CODE:
from numpy import*
v= str(array(eval(input("seu vetor: ")))

for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
File "XXXX", line 4
    for i in range(size(v)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:33) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))

for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:01) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))

for i in range(size(v)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:54) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))

for i in range(size(v)//2):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:01) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))

for i in range(size(v)//2):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:10) 
-- CODE:
from numpy import*
v= array(eval(input("seu vetor: ")))

for i in range(len(size(v)//2)):
	j=size(v)-1-i
	aux=v[i]
	v[i]=v[j]
	v[j]=aux
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
